Native/Test/KL/CORE-130.out
CORE-130.kl:9:3: error: constants cannot be used as l-values
CORE-130.kl:10:3: error: calling function 'myFunction': incorrect number of arguments: expected 2, actual 4
